Add expires headers to static assets

--- a/config/httpd/production_rails_acdata.conf
+++ b/config/httpd/production_rails_acdata.conf
@@ -41,9 +41,17 @@ NameVirtualHost 149.171.101.138:80
     XSendFilePath /spare/acdata/data
     XSendFilePath /tmp
     <Directory /spare/acdata/acdata-web/current/public>
-         AllowOverride all
-         Options -MultiViews
+        AllowOverride all
+        Options -MultiViews
+        ExpiresActive On
+        ExpiresByType image/gif A2592000
+        ExpiresByType image/jpg A2592000
+        ExpiresByType image/png A2592000
+        ExpiresByType text/css A2592000
+        ExpiresByType application/x-javascript A2592000
     </Directory>
+
+    FileETag MTime
 
     RewriteEngine on
     RewriteRule ^/help/?$ /help/index.php [L,R]
