DEVSUPPORT-943: Multiple metadata fixes for Aperio Harvester
* Adds Image URL field
* Generates "Specimen ID" when none is supplied by user

--- a/config/acdata_deploy_config_template.yml
+++ b/config/acdata_deploy_config_template.yml
@@ -13,6 +13,7 @@ defaults: &defaults
     export_data_url:
     slide_thumbnail_url:
     label_thumbnail_url:
+    image_url:
     username:
     password:
     instrument_name:
