MISC: Alters  QA database settings

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ test: &test
   pool: 5
   timeout: 5000
 
-production:
+production: &production
   adapter: postgresql
   host: localhost
   database: acdata
@@ -29,7 +29,7 @@ production:
   timeout: 5000
 
 staging:
-  production # same configuration, but on different server
+  <<: *production # same configuration, but on different server
 
 qa:
   production # same configuration, but on different server
