DEVSUPPORT-1162: Fixes broken pointers in database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -29,10 +29,10 @@ production: &production
   timeout: 5000
 
 staging:
-  <<: *production # same configuration, but on different server
+  <<: *production
 
 qa:
-  production # same configuration, but on different server
+  <<: *production
 
 cucumber:
   <<: *test
